@@ -1,3 +1,4 @@
+	* improve compatibility of SOCKS5 UDP ASSOCIATE
 	* fix madvise range for flushing cache in mmap_storage
 	* open files with no_cache set in O_SYNC mode
 
